# foundationdb

./: LICENSE  README.md  default.nix  foundationdb-hs.nix  foundationdb.cabal
csrc/: fdb_hs.c  fdb_hs.h
src/FoundationDb/: C.hs  Types.chs
src/FoundationDb/C/: FFI.hs  Types.chs
test/: test-io.hs  test.hs
test/Test/FoundationDb/: C.hs  Util.hs
test/Test/IO/FoundationDb/: C.hs  Process.hs
