name:                  foundationdb
version:               0.0.1
synopsis:              Haskell bindings to Apple's FoundationDB
homepage:              https://github.com/thumphries/foundationdb
license:               BSD3
author:                Tim Humphries
maintainer:            tim@utf8.me
category:              System
build-type:            Simple
cabal-version:         >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  hs-source-dirs:      src

  build-tools:         c2hs >= 0.28

  extra-libraries:     fdb_c

  exposed-modules:     
                       FoundationDb.C
                       FoundationDb.C.FFI
                       FoundationDb.Types

  build-depends:
                       base

test-suite test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  hs-source-dirs:      test
  main-is:             test.hs

  build-depends:
                       base
                     , foundationdb
                     , hspec
